[gd_scene format=3 uid="uid://bx7mq8t8hjn7q"]

[ext_resource type="FontFile" uid="uid://diapabmalpcrj" path="res://assets/fonts/Kurland.ttf" id="1_font"]
[ext_resource type="FontFile" uid="uid://guh442jd2yjb" path="res://assets/fonts/Poesing.ttf" id="2_b8bkt"]
[ext_resource type="Script" uid="uid://wfj6b11wkwx2" path="res://scripts/main_menu_ui.gd" id="2_script"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_npnbc"]
color = Color(0, 0, 0, 0)

[sub_resource type="Theme" id="Theme_b8bkt"]

[node name="MainMenuUI" type="Control" unique_id=1349505428]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1314480336]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="MainContainer" type="VBoxContainer" parent="." unique_id=588899682]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -257.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="MainContainer" unique_id=1271503245]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_b8bkt")
theme_override_font_sizes/font_size = 120
text = "Entropy"

[node name="MainMenu" type="VBoxContainer" parent="MainContainer" unique_id=1394153058]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MainContainer/MainMenu" unique_id=566263363]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_npnbc")

[node name="Option1" type="HBoxContainer" parent="MainContainer/MainMenu" unique_id=1901560822]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MainContainer/MainMenu/Option1" unique_id=103856760]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_b8bkt")
theme_override_fonts/font = ExtResource("2_b8bkt")
theme_override_font_sizes/font_size = 45
text = "Nickname : "

[node name="NickInput" type="LineEdit" parent="MainContainer/MainMenu/Option1" unique_id=998896876]
layout_mode = 2
theme_override_colors/font_color = Color(0.56078434, 0.56078434, 0.56078434, 1)
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 35
placeholder_text = "YourNick"
max_length = 20
expand_to_text_length = true

[node name="Option2" type="HBoxContainer" parent="MainContainer/MainMenu" unique_id=800915173]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MainContainer/MainMenu/Option2" unique_id=2010460183]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_b8bkt")
theme_override_fonts/font = ExtResource("2_b8bkt")
theme_override_font_sizes/font_size = 45
text = "Player Skin : "

[node name="OptionButton" type="OptionButton" parent="MainContainer/MainMenu/Option2" unique_id=90142483]
layout_mode = 2
theme_override_colors/font_color = Color(0.56078434, 0.56078434, 0.56078434, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 29
selected = 0
item_count = 4
popup/item_0/text = "red"
popup/item_0/id = 0
popup/item_1/text = "blue"
popup/item_1/id = 1
popup/item_2/text = "green"
popup/item_2/id = 2
popup/item_3/text = "yellow"
popup/item_3/id = 3

[node name="Option3" type="HBoxContainer" parent="MainContainer/MainMenu" unique_id=829863446]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MainContainer/MainMenu/Option3" unique_id=790739463]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_b8bkt")
theme_override_fonts/font = ExtResource("2_b8bkt")
theme_override_font_sizes/font_size = 45
text = "IP Address : "

[node name="AddressInput" type="LineEdit" parent="MainContainer/MainMenu/Option3" unique_id=922286227]
layout_mode = 2
theme_override_colors/font_color = Color(0.56078434, 0.56078434, 0.56078434, 1)
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 35
placeholder_text = "127.0.0.1"
alignment = 1
expand_to_text_length = true

[node name="HSeparator2" type="HSeparator" parent="MainContainer/MainMenu" unique_id=1680648447]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_npnbc")

[node name="Buttons" type="HBoxContainer" parent="MainContainer/MainMenu" unique_id=51052093]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Host" type="Button" parent="MainContainer/MainMenu/Buttons" unique_id=2143335380]
layout_mode = 2
theme = SubResource("Theme_b8bkt")
theme_override_colors/font_pressed_color = Color(0, 0.52549, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.52549, 0, 1)
theme_override_fonts/font = ExtResource("2_b8bkt")
theme_override_font_sizes/font_size = 45
text = "HOST"
flat = true

[node name="Join" type="Button" parent="MainContainer/MainMenu/Buttons" unique_id=73276680]
layout_mode = 2
theme = SubResource("Theme_b8bkt")
theme_override_colors/font_pressed_color = Color(0, 0.52549, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.525257, 0, 1)
theme_override_fonts/font = ExtResource("2_b8bkt")
theme_override_font_sizes/font_size = 45
text = "JOIN"
flat = true

[node name="Option4" type="HBoxContainer" parent="MainContainer/MainMenu" unique_id=940297530]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Quit" type="Button" parent="MainContainer/MainMenu/Option4" unique_id=1672994946]
layout_mode = 2
theme = SubResource("Theme_b8bkt")
theme_override_colors/font_pressed_color = Color(0.858824, 0, 0, 0.862745)
theme_override_colors/font_hover_color = Color(0.858807, 4.71681e-06, 1.15514e-06, 0.862745)
theme_override_fonts/font = ExtResource("2_b8bkt")
theme_override_font_sizes/font_size = 45
text = "QUIT"
flat = true

[connection signal="pressed" from="MainContainer/MainMenu/Buttons/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainContainer/MainMenu/Buttons/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MainContainer/MainMenu/Option4/Quit" to="." method="_on_quit_pressed"]
